syntax="proto2";

package yamcs.protobuf.packets;

option java_package = "org.yamcs.protobuf";
option java_outer_classname = "PacketsProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "yamcs/protobuf/yamcs.proto";


message TmPacketData {
  // Raw packet binary
  required bytes packet = 2;
  optional int32 sequenceNumber = 4;
  optional NamedObjectId id = 5;

  // When the packet was generated
  optional google.protobuf.Timestamp generationTime = 9;

  // When the signal has been received on the groun
  optional google.protobuf.Timestamp earthReceptionTime = 10;

  // When the packet was received by Yamcs
  optional google.protobuf.Timestamp receptionTime = 8;

  // Name of the Yamcs link where this packet was received from
  optional string link = 11;
}
